[package]
name = "rust-simulator"
version = "0.1.0"
authors = ["Jeremiah Wagstaff <jeremiah.wagstaff@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ed25519-dalek = "0.9.1"
rand = "0.6"
sha2 = "0.8.0"
ring = "0.16.9"
aes = "0.3.2"
block-modes = "0.3.3"
byteorder = "1.3.2"
num-bigint = "0.2.3"
num-traits = "0.2.10"
bitintr = "0.3.0"
