[package]
name = "rust-simulator"
version = "0.1.0"
authors = ["Jeremiah Wagstaff <jeremiah.wagstaff@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ed25519-dalek = "1.0.0-pre.1"
rand = "0.7.2"
sha2 = "0.8.0"
ring = "0.16.9"
aes = "0.3.2"
block-modes = "0.3.3"
byteorder = "1.3.2"
itertools = "0.8.2"
num-bigint = "0.2.3"
num-traits = "0.2.10"
bitintr = "0.3.0"
merkle = "1.11.0"
hex = "0.4.0"

[profile]
[profile.release]
lto = true
opt-level = 3
